style: change var names

--- a/python/grafos.ipynb
+++ b/python/grafos.ipynb
@@ -4069,7 +4069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4108,15 +4108,15 @@
     "\n",
     "orientadores = {}\n",
     "nodes = g_pesquisadores_orientados.nodes(data=\"orientador\", default=\"\")\n",
-    "for orientado, orientador in nodes:\n",
-    "    if orientador == \"\":\n",
-    "        if orientado not in orientadores.keys():\n",
-    "            orientadores[orientado] = []\n",
+    "for node in nodes:\n",
+    "    if node[1] == \"\":\n",
+    "        if node[0] not in orientadores.keys():\n",
+    "            orientadores[node[0]] = []\n",
     "        continue\n",
     "\n",
-    "    if orientador not in orientadores.keys():\n",
-    "        orientadores[orientador] = []\n",
-    "    orientadores[orientador].append(orientado)\n",
+    "    if node[1] not in orientadores.keys():\n",
+    "        orientadores[node[1]] = []\n",
+    "    orientadores[node[1]].append(node[0])\n",
     "        \n",
     "total_colaboracoes_possiveis = 0\n",
     "total_orientandos = 0\n",
