fix: wrong title

--- a/python/grafos.ipynb
+++ b/python/grafos.ipynb
@@ -4158,7 +4158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4195,7 +4195,7 @@
     "pos = nx.fruchterman_reingold_layout(g_orientandos, k=0.15)\n",
     "nx.draw_networkx_nodes(g_orientandos, pos, node_size=70, node_color=\"green\")\n",
     "nx.draw_networkx_edges(g_orientandos, pos)\n",
-    "plt.title(\"Grafo com Pesquisadores, Autores e Orientados de Mestrado e Doutorado\")\n",
+    "plt.title(\"Grafo com Colaboraçãos entre Orientados\")\n",
     "plt.show()"
    ]
   },
